# CutFrameData

./: Cutframe  Cutframe.cpp  README.md  ffmpeg  ffmpeg.cpp  frame.cpp  resize  resize.cpp
crop/: CMakeLists.txt  detect.cpp  detect.hpp  facemask.cpp  humandetect.param  scrfd.cpp  scrfd.hpp
crop/ClassificationModel/: facemask-vgg16.param  facemask-vgg16.txt
